# one-leds

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: default.json
leds_server/: __main__.py
leds_server/apps/: example_app.py
leds_server/apps/color_server/: color_server.py  util.py
leds_server/apps/example_app/: example_app.py
leds_server/apps/music_dance/: music_dance.py
leds_server/common/: app.py  color.py  config.py  control_instance.py
leds_server/control_instances/: __init__.py  control_instance_direct.py  control_instance_remote.py
leds_server/submodule/: config.py  control_instance.py
mcu/: color.h  led_server_esp32.ino  udp_packet_receiver.h
one_leds/: __main__.py
one_leds/apps/color_server/: color_server.py  util.py
one_leds/apps/example_app/: example_app.py
one_leds/apps/music_dance/: music_dance.py
one_leds/common/: app.py
one_leds/control_instances/: control_instance_direct.py  control_instance_remote.py
scripts/: udp_color_sender.sh  udp_sender.sh
