[tool.poetry]
name = "leds-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rpi-ws281x = "^5.0.0"
adafruit-circuitpython-neopixel = "^6.3.12"
adafruit-blinka = "^8.50.0"
pylint = "^3.3.1"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
