[tool.poetry]
name = "one-leds"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rpi-ws281x = { version = "^5.0.0", markers = "platform_system == 'Linux' and platform_machine == 'armv7l'" }
adafruit-circuitpython-neopixel = { version = "^6.3.12", markers = "platform_system != 'Windows'" }
adafruit-blinka = { version = "^8.50.0", markers = "platform_system != 'Windows'" }
pylint = "^3.3.1"
pydantic = "^2.9.2"
numpy = "^2.1.3"
sounddevice = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
